# dbtlist

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/jaffe_shop_duckdb/: new.json  old.json
dbtlist/: __init__.py  cli.py  manifest.py  selector.py
tests/: test_integration.py  test_manifest.py
